dev: Fixing sweepstake alignment issues for desktop

--- a/ui-web-service/src/pages/Sweepstake/Sweepstakes.scss
+++ b/ui-web-service/src/pages/Sweepstake/Sweepstakes.scss
@@ -191,9 +191,9 @@
         visibility: visible;
         display: flex;
         flex-direction: column;
-        flex: 0.45;
+        flex: 0.45 1;
+        padding-left: 25px;
         padding-right: 25px;
-        padding-bottom: 25px;
       }
 
       .sweepstakes {
